add, navbar widget, and shared ui component applink

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,8 @@
 .app.dark {
-  --bg-color: #131313;
+	--bg-color: #131313;
+	--navbar-bg-color: #202020;
 
-  --primary-color: #ffffff;
-  --secondary-color: #202020;
+	--primary-color: #ffffff;
+	--secondary-color: #202020;
+	--navbar-color: #848484;
 }
