--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,6 +1,8 @@
 .app.light {
-  --bg-color: #e8e8ea;
+	--bg-color: #f9fafb;
+	--navbar-bg-color: #e5e7eb;
 
-  --primary-color: #041c65;
-  --secondary-color: #0449e8;
+	--primary-color: #041c65;
+	--secondary-color: #0449e8;
+	--navbar-color: #717171;
 }
