--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,23 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
-
-@import 'reset';
-@import 'variable/global';
-@import 'themes/light';
-@import 'themes/dark';
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
+@import "reset";
+@import "variable/global";
+@import "themes/light";
+@import "themes/dark";
 
 .app {
-	font: var(--font-m);
-	font-family: 'Poppins', sans-serif;
-	background: var(--bg-color);
-	color: var(--primary-color);
-	min-height: 100vh;
+  font: var(--font-m);
+  font-family: Poppins, sans-serif;
+  background: var(--bg-color);
+  color: var(--primary-color);
+  min-height: 100vh;
 }
 
 .content-page {
-	display: flex;
+  display: flex;
 }
 
 .page-wrapper {
-	flex-grow: 1;
-	padding: 20px;
+  flex-grow: 1;
+  padding: 20px;
 }
