--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,8 +1,7 @@
 .app.dark {
-	--bg-color: #131313;
-	--navbar-bg-color: #202020;
-
-	--primary-color: #ffffff;
-	--secondary-color: #202020;
-	--navbar-color: #848484;
+  --bg-color: #131313;
+  --navbar-bg-color: #202020;
+  --primary-color: #fff;
+  --secondary-color: #202020;
+  --navbar-color: #848484;
 }
