add styling, translation, moving the toggle button, test updates

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -4,4 +4,6 @@
   --primary-color: #fff;
   --secondary-color: #202020;
   --navbar-color: #848484;
+  --hover-navbar-color: #fff;
+  --hover-bg-color: #272626;
 }
