--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,7 +1,10 @@
 .app.light {
   --bg-color: #f9fafb;
   --navbar-bg-color: #e5e7eb;
-  --primary-color: #041c65;
+  --primary-color: #01081e;
   --secondary-color: #0449e8;
   --navbar-color: #717171;
+  /* stylelint-disable-next-line color-hex-length */
+  --hover-navbar-color: #000000;
+  --hover-bg-color: #dfdfdf;
 }
