add a modal window, portal

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,11 +4,14 @@
 @import "themes/light";
 @import "themes/dark";
 
-.app {
+.body {
   font: var(--font-m);
   font-family: Poppins, sans-serif;
-  background: var(--bg-color);
   color: var(--primary-color);
+}
+
+.app {
+  background: var(--bg-color);
   min-height: 100vh;
 }
 
