--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,7 +4,8 @@
 @import "themes/light";
 @import "themes/dark";
 
-.body {
+.app,
+.app_modal {
   font: var(--font-m);
   font-family: Poppins, sans-serif;
   color: var(--primary-color);
